fixing security issue

--- a/.env
+++ b/.env
@@ -1,30 +1,4 @@
 HELIUS_RPC_URL="https://devnet.helius-rpc.com/?api-key=2234879b-145b-4cc0-8176-7a8d8b534484"
 HELIUS_RPC_WSS="wss://devnet.helius-rpc.com/?api-key=2234879b-145b-4cc0-8176-7a8d8b534484"
+MESHY_API_KEY="msy_Atp4eXg5ESwKCqomHZgaMVVcStOU8vbgxOmj"
 
-
-{
-  "jsonrpc": "2.0",
-  "id": "my-id",
-  "method": "searchAssets",
-  "params": {
-    "ownerAddress": "2FwBLURK4CpGqpsempCapgzd2fSrhZkT3FxnYyxsLWHm",
-    "tokenType": "nonFungible"
-  }
-}
-
-
-{
-    "result": {
-        "items": [{
-            "interface": "V1_NFT",
-            "id": "FjBFdJKnqa8XzFYpv5q4rGDymHydTMCqASdpu29u6AJB",
-            "content": {
-                "json_uri": "https://quicknode.myfilebase.com/ipfs/QmQHB7BaqXRgyZYVEEBrc7tHE4gAN6Be6YfrS4w1yUzwRS/",
-                "metadata": {
-                    "description": "Green Q",
-                    "name": "QNCity",
-                },
-            },
-        }]
-    },
-}
